# fvwm3

./: README.md  configure.ac
fvwm/: add_window.c  builtins.c  session.c
libs/: FBidi.c  Makefile.am  safemalloc.c  safemalloc.h
modules/: Makefile.am
modules/FvwmScript/: FvwmScript.c  Instructions.c
modules/FvwmShell/: FvwmShell.c  Makefile.am
